#14 / change on about page according to figma (#47)

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -11,6 +11,7 @@
 }
 
 .nav-details {
+  font-family: 'Helvetica';
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -20,7 +21,7 @@
 }
 
 .nav-link {
-  font-family: 'Orbitron';
+  font-family: 'Helvetica';
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -45,11 +46,11 @@
   letter-spacing: 0.05em;
   color: #ffffff;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
   .phn-no {
-    display: none;
+    display: none !important;
   }
   .email {
-    display: none;
+    display: none !important;
   }
 }
