--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,27 +1,28 @@
 .banner-1 img {
   width: 100%;
 }
-
-.about-yatra {
-  margin-top: 70px;
-}
-
-.about-yatra h1 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 38px;
-  line-height: 115.5%;
-  letter-spacing: 0.05em;
-  color: #ed1e24;
-}
-
-.about-yatra p {
+.about-text {
+  font-family: 'Helvetica';
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 160%;
   letter-spacing: 0.05em;
   color: #ffffff;
+}
+
+.about-yatra {
+  margin-top: 70px;
+}
+
+.about-yatra h1 {
+  font-family: 'Helvetica Rounded';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ed1e24;
 }
 
 .mission-box {
@@ -38,7 +39,7 @@
 }
 
 .box-team {
-  border-radius: 19px;
+  border-radius: 42px;
   border: 1px solid #ed1e24;
   height: 606px;
 }
