--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,36 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
+.contact-us-page {
+  overflow: hidden;
+}
+
+.phone-numbers,
+.email-id {
+  word-wrap: break-word;
+}
 .contact-us-section {
   margin-top: 110px;
 }
+.contact-us-section .container {
+  padding-right: 0 !important;
+}
 
-.contact-banner{
+.contact-banner {
   background-color: #252525;
   height: 507px;
   display: flex;
   align-items: center;
 }
-.chain-sm{
-  /* width: 50% !important; */
+.chain-sm {
+  padding-left: 40px;
 }
 .contact-us {
   font-style: normal;
-  font-weight: 800;
+  font-weight: 700;
   font-size: 38px;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
+  font-family: Helvetica;
+  line-height: 115.5%;
+}
+.contact-data {
+  font-family: Helvetica;
 }
 
-
 .contact-data p {
-  font-family: 'Outfit';
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 115.5%;
   letter-spacing: 0.135em;
-  color: #FFFFFF;
+  color: #ffffff;
+  margin-left: 50px;
+}
+.contact-data .address {
+  margin-left: 45px !important;
 }
 
 .contact-info {
@@ -40,11 +63,13 @@
   line-height: 115.5%;
   letter-spacing: 0.05em;
   padding-top: 20px;
+  margin-bottom: 20px;
 }
 
 .touch {
   background-color: #252525;
-  border: 2px solid #ED1E24;
+  border: 2px solid #ed1e24;
+  font-family: Helvetica;
 }
 
 .touch h4 {
@@ -53,7 +78,7 @@
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
 .touch p {
@@ -62,7 +87,7 @@
   font-size: 18px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .text-area {
@@ -72,6 +97,13 @@
 input {
   width: 223px;
   height: 62px;
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px !important;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ffffff !important;
 }
 
 .form-bg {
@@ -85,11 +117,21 @@ input {
   margin-top: 200px !important;
 }
 
+.banner-contact .container {
+  padding-right: 0 !important;
+}
+
 .text-area {
   height: 157px;
 }
 
 ::placeholder {
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px !important;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
   color: #ffffff !important;
 }
 
@@ -99,19 +141,23 @@ input {
 }
 
 .send-message {
-  font-family: 'Orbitron';
+  font-family: Helvetica;
   font-style: normal;
   font-weight: 700;
-  font-size: 38px;
+  font-size: 20px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #FFFFFF;
+  color: #ffffff;
   width: 369px;
   height: 57px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #ED1E24;
+  background: #ed1e24;
+}
+
+button {
+  border: none;
 }
 
 .mt-chain {
@@ -123,26 +169,37 @@ input {
 }
 
 .red {
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
-
 .location {
-  font-family: 'Orbitron';
+  font-family: Helvetica;
   font-style: normal;
   font-weight: 700;
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
+  margin-bottom: 77px;
+}
+.map-chain {
+  margin-top: 124px;
 }
 
 .banner-faq {
   margin-top: 150px;
+  margin-bottom: 100px;
+}
+.banner-faq .container {
+  padding-right: 0px !important;
 }
 
 .mt-faq {
   margin-top: 43px;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .faq {
@@ -150,7 +207,9 @@ input {
   font-size: 128px;
   line-height: 130%;
   letter-spacing: 0.135em;
-  color: #ED1E24;
+  color: #ed1e24;
+  font-family: Helvetica;
+  margin-top: 50px;
 }
 
 .banner-faq h5 {
@@ -159,7 +218,7 @@ input {
   font-size: 24px;
   line-height: 130%;
   letter-spacing: 0.135em;
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
 .frequently {
@@ -168,7 +227,8 @@ input {
   font-size: 20px;
   line-height: 130%;
   letter-spacing: 0.135em;
-  color: #FFFFFF;
+  color: #ffffff;
+  font-family: Helvetica;
 }
 
 .banner-faq .faq-point {
@@ -177,26 +237,59 @@ input {
   font-size: 22px;
   line-height: 130%;
   letter-spacing: 0.135em;
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
 .faq-point p {
   line-height: 130%;
 }
 
-
 /* ---Responsive----------- */
-@media screen and (max-width:992px){
-  .mt-sm{
+
+@media screen and (max-width: 992px) {
+  .mt-sm {
     margin-top: 40px;
   }
-  .contact-banner{
-    background-color:inherit;
+  .chain-sm {
+    margin-top: 50px;
+    padding-left: 20px;
+    padding-right: 0;
+  }
+  .banner-contact {
+    margin-top: 50px !important;
+  }
+  .map-chain {
+    margin-top: 50px;
+    padding-left: 10px;
+  }
+  .banner-faq {
+    margin: 50px 0px;
+  }
+  .contact-banner {
+    background-color: inherit;
     height: inherit;
-    
   }
   .faq {
     font-size: 80px;
   }
-  
+  .small-wd {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 430px) {
+  .banner-contact {
+    max-width: 96%;
+  }
+  .contact-data p {
+    margin-left: 5px;
+  }
+  .contact-data .address {
+    margin-left: 5px !important;
+  }
+  .banner-faq {
+    max-width: 96%;
+  }
+  .contact-banner {
+    max-width: 96%;
+  }
 }
