--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,8 @@
 /* -------footer--- */
 .footer {
+  font-family: 'Helvetica';
   width: 100%;
-  background: url("../../images/footerbg.png");
+  background: url('../../images/footerbg.png');
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -11,16 +12,15 @@
   width: 100%;
   background-repeat: no-repeat;
   height: 3px;
-
 }
-.footer-logo{
+.footer-logo {
   height: 76px;
   width: 177px;
 }
-a{
-  color:#fff;
+a {
+  color: #fff;
   text-decoration: none;
 }
-a:hover{
+a:hover {
   color: #fff;
 }
