--- a/src/components/Teambox/style.css
+++ b/src/components/Teambox/style.css
@@ -1,38 +1,40 @@
 .teambox-img img {
-	width: 233px;
-	padding-top: 50px;
+  width: 233px;
+  padding-top: 50px;
 }
 
 .teambox-text p {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 115.5%;
-	text-align: center;
-	letter-spacing: 0.05em;
-	color: #FFFFFF;
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 115.5%;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
 
 .teambox-text h3 {
-	font-style: normal;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 115.5%;
-	letter-spacing: 0.05em;
-	color: #FFFFFF;
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
 
 .teambox-text h4 {
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 115.5%;
-	letter-spacing: 0.05em;
-	color: #FFFFFF;
-
+  font-family: 'Helvetica';
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
 
 .social-links a {
-	font-size: 24px;
-	color: #FFFFFF;
-	text-decoration: none;
+  font-size: 24px;
+  color: #ffffff;
+  text-decoration: none;
 }
