--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
+
+/* @import url('https://fonts.cdnfonts.com/css/helvetica-2'); */
 
 body {
   background-color: #121212;
-  font-family: "Orbitron", sans-serif;
   font-style: normal;
+  font-family: 'Helvetica';
 }
 
 .padtb {
@@ -14,6 +16,6 @@ ul li {
   list-style: none;
 }
 
-.pointer{
+.pointer {
   cursor: pointer;
 }
